# osu-mappack-creator-v2

./: .gitignore  README.md  README_zh.md  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: delete.osu
src-tauri/src/: commands.rs  lib.rs  main.rs
src/utils/: logger.ts
